update: update tests