@@ -8,6 +8,8 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
+import java.time.Duration;
+import java.time.LocalDateTime;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -24,17 +26,57 @@ public class InMemoryTaskManagerTest {
     @Test
     public void testAddAndGetTasksById() {
         Task task = new Task("Задача 1", "Описание задачи", TaskStatus.NEW);
-        Epic epic = new Epic("Эпик 1", "Описание эпика");
-
+        task.setDuration(Duration.ofMinutes(60));
+        task.setStartTime(LocalDateTime.of(2023, 12, 1, 10, 0));
         taskManager.createTask(task);
-        taskManager.createEpic(epic);
 
-        Subtask subtask = new Subtask("Подзадача 1", "Описание подзадачи", TaskStatus.NEW);
-        taskManager.createSubtask(subtask, epic);
+        assertEquals(Duration.ofMinutes(60), taskManager.getTaskById(task.getId()).getDuration(),
+                "Продолжительность задачи должна быть равна 60 минутам.");
+        assertEquals(LocalDateTime.of(2023, 12, 1, 10, 0), taskManager.getTaskById(task.getId()).getStartTime(),
+                "Дата начала задачи должна совпадать.");
+        assertEquals(LocalDateTime.of(2023, 12, 1, 11, 0), taskManager.getTaskById(task.getId()).getEndTime(),
+                "Дата окончания задачи должна быть рассчитана.");
+    }
 
-        assertEquals(task, taskManager.getTaskById(task.getId()), "Задача должна быть доступна по своему ID.");
-        assertEquals(epic, taskManager.getEpicById(epic.getId()), "Эпик должен быть доступен по своему ID.");
-        assertEquals(subtask, taskManager.getSubtaskById(subtask.getId()), "Подзадача должна быть доступна по своему ID.");
+    // Проверка пересечения задач
+    @Test
+    public void testTaskOverlapValidation() {
+        Task task1 = new Task("Задача 1", "Описание задачи", TaskStatus.NEW);
+        task1.setDuration(Duration.ofMinutes(60));
+        task1.setStartTime(LocalDateTime.of(2023, 12, 1, 10, 0));
+        taskManager.createTask(task1);
+
+        Task task2 = new Task("Задача 2", "Описание задачи 2", TaskStatus.NEW);
+        task2.setDuration(Duration.ofMinutes(60));
+        task2.setStartTime(LocalDateTime.of(2023, 12, 1, 10, 30));
+
+        assertThrows(IllegalArgumentException.class, () -> taskManager.createTask(task2),
+                "Создание задачи должно выбросить исключение при пересечении времени.");
+    }
+
+    // Проверка сортировки getPrioritizedTasks
+    @Test
+    public void testGetPrioritizedTasks() {
+        Task task1 = new Task("Задача 1", "Описание задачи", TaskStatus.NEW);
+        task1.setDuration(Duration.ofMinutes(60));
+        task1.setStartTime(LocalDateTime.of(2023, 12, 1, 10, 0));
+        taskManager.createTask(task1);
+
+        Task task2 = new Task("Задача 2", "Описание задачи", TaskStatus.NEW);
+        task2.setDuration(Duration.ofMinutes(30));
+        task2.setStartTime(LocalDateTime.of(2023, 12, 1, 9, 0));
+        taskManager.createTask(task2);
+
+        Task task3 = new Task("Задача 3", "Описание задачи", TaskStatus.NEW);
+        task3.setDuration(Duration.ofMinutes(45));
+        task3.setStartTime(null);
+        taskManager.createTask(task3);
+
+        List<Task> prioritizedTasks = taskManager.getPrioritizedTasks();
+
+        assertEquals(task2, prioritizedTasks.getFirst(), "Первая задача должна быть task2 с самой ранней датой старта.");
+        assertEquals(task1, prioritizedTasks.get(1), "Вторая задача должна быть task1.");
+        assertFalse(prioritizedTasks.contains(task3), "Задачи без startTime не должны быть в приоритетном списке.");
     }
 
     // Проверка отсутствия конфликтов сгенерированных ID
@@ -79,7 +121,7 @@ public class InMemoryTaskManagerTest {
         // Проверка истории
         List<Task> history = taskManager.getHistory();
         assertEquals(2, history.size(), "История должна содержать две задачи.");
-        assertEquals(task1, history.get(0), "Первая задача в истории должна быть task1.");
+        assertEquals(task1, history.getFirst(), "Первая задача в истории должна быть task1.");
         assertEquals(task2, history.get(1), "Вторая задача в истории должна быть task2.");
     }
 
@@ -101,7 +143,7 @@ public class InMemoryTaskManagerTest {
         // Проверка истории
         List<Task> history = taskManager.getHistory();
         assertEquals(1, history.size(), "После удаления история должна содержать одну задачу.");
-        assertEquals(task2, history.get(0), "Оставшаяся задача должна быть task2.");
+        assertEquals(task2, history.getFirst(), "Оставшаяся задача должна быть task2.");
     }
 
     // Проверка удаления подзадачи из эпика
